fixes some layout issues in homepage

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,3 +15,9 @@
 .font-size-2 {
   font-size: 2rem;
 }
+
+@media (max-width: 450px) {
+  .navbar-brand {
+    font-size: 1.1rem;
+  }
+}
